# Scappy-Telegram

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: architecture.md  deploy.md
docs/memory/: changelog.md  current.md  roadmap.md
src/scappy_telegram/: __init__.py  cleaning.py  config.py  dedupe.py  main.py  models.py  publisher.py  runtime.py  storage.py  telegram_ingest.py  validator.py  worker.py
tests/: test_cleaning.py  test_config.py  test_dedupe.py  test_storage.py  test_telegram_ingest.py  test_validator.py  test_worker.py
